--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <header>
         <div class="header-innerwrapper">
             <div class="logo col-md-4">
-                <img src="assets/images/logo.png" />
+              <!--# repersents the link, add link in place of #-->
+            <a href="#"><img src="assets/images/logo.png" /></a>
             </div>
 
             <div class="menu col-md-8">
