--- a/solution.html
+++ b/solution.html
@@ -38,7 +38,7 @@
         <div class="menu col-md-8">
             <div class="nav-wrapper">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="solution.html">Solution</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="about.html">About</a></li>
