--- a/fleet.html
+++ b/fleet.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="btm-img">
-            <img src="assets/images/combine.webp" />
+            <img src="assets/images/combine2.png" />
         </div>
 
     </div>
