--- a/contact-us.html
+++ b/contact-us.html
@@ -76,7 +76,11 @@
                 <div class="items col-md-6 col-sm-6 col-xs-12">
                     <span>Our Team will be in touch with you soon.</span>
                     <p class="hinfo">
-                        Thank you for your enquiry. Our concerned team will be contacting you soon to help you with your query.
+                         Thank you for your enquiry. Our concerned team will be contacting you soon to help you with your query.
+                     <p class="hinfo">
+                         Please connect with us at
+                     <p class="hinfo">
+                         Email - rimonecharge@gmail.com
                     </p>
                 </div>
             </div>
