--- a/type-of-evs.html
+++ b/type-of-evs.html
@@ -74,7 +74,7 @@
         <div class="container">
             <h3>All Battery Electric Vehicles in India</h3>
             <hr>
-            <img src="assets/images/evcars.jpg" />
+            <img src="assets/images/evcars.png" />
         </div>
     </div>
 
