--- a/charging-basics-1.html
+++ b/charging-basics-1.html
@@ -44,7 +44,7 @@
     <h3>EV CHARGING BASICS</h3>
     <p class="pinfo">
         <strong>
-            Curious about EV, we will answer all your questions related to electric vehicles. We’ll start from the basics — What is an electric vehicle? — to the nuts and bolts of variables that affect your charging speeds. Scroll at your leisure! And feed your curiosity.
+            Curious about EV, we will answer all your questions related to electric vehicles. We’ll start from the basics, What is an electric vehicle?-to-the nuts and bolts of variables that affect your charging speeds. Scroll at your leisure! And feed your curiosity.
         </strong>
     </p>
 
