rimone 2.2 with mobile view correction

--- a/about.html
+++ b/about.html
@@ -41,6 +41,9 @@
     </header>
 
     <div id="page" class="">
+        <div class="pcontainer-wrapper">
+
+
       <h3>ABOUT RIMONE</h3>
       <p>
       We aim to bring emobility in India by creating a nationwide network of charging stations for<br> electric vehicles. So that people can move freely in their electric vehicles without worrying about <br>their next charge. We want to make EV charging convenient, reliable and affordable.
@@ -98,70 +101,70 @@
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg7.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Clean Energy</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg8.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Economic Growth</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg9.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Innovative Infrastructure</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg11.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Sustainable Cities</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg13.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Climate Action</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg15.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Life on Earth</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg7.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Clean Energy</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg8.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Economic Growth</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg9.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Innovative Infrastructure</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
                   <div class="owl-feat-item">
                       <img src="assets/images/sdg11.png" />
                       <div class="slidecaption">
-                          <div class="slide-title">Sustainable Cities</div>
+                          <div class="slide-title">Name</div>
                       </div>
                   </div>
 
@@ -197,7 +200,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <div id="footer"></div>
 
 </body>
