--- a/business.html
+++ b/business.html
@@ -41,6 +41,7 @@
 </header>
 
 <div id="page" class="">
+    <div class="pcontainer-wrapper">
     <h3>HOST AN EV CHARGING STATION</h3>
     <p>Be the Green leader of India and achieve the green leader title by adopting EV charging infrastructure at your location.</p>
     <div class="business">
@@ -104,6 +105,7 @@
             <img src="assets/images/websitepagep.png" />
         </div>
     </div>
+</div>
 </div>
 
 <div id="footer"></div>
