--- a/charging-basics-1.html
+++ b/charging-basics-1.html
@@ -41,10 +41,11 @@
 </header>
 
 <div id="page" class="">
+    <div class="pcontainer-wrapper">
     <h3>EV CHARGING BASICS</h3>
     <p class="pinfo">
         <strong>
-            Curious about EV, we will answer all your questions related to electric vehicles. We’ll start from the basics, What is an electric vehicle? to the nuts and bolts of variables that affect your charging speeds. Scroll at your leisure! And feed your curiosity.
+            Curious about EV, we will answer all your questions related to electric vehicles. We’ll start from the basics — What is an electric vehicle? — to the nuts and bolts of variables that affect your charging speeds. Scroll at your leisure! And feed your curiosity.
         </strong>
     </p>
 
@@ -112,6 +113,7 @@
                 </div>
             </div>
     </div>
+</div>
 </div>
 </div>
     <div id="footer"></div>
