--- a/charging-etiquettes.html
+++ b/charging-etiquettes.html
@@ -41,6 +41,7 @@
 </header>
 
 <div id="page" class="">
+    <div class="pcontainer-wrapper">
     <div class="heros">
         <div class="container item-wrapper">
             <h3>ELECTRIC VEHICLE CHARGING ETIQUETTES</h3>
@@ -93,7 +94,7 @@
                 <div class="htext col-md-6 col-sm-6 col-xs-12">
                     <h4>Moving with e-mobility</h4>
                     <p class="hinfo">
-                        Creating a sustainable future for a better tomorrow.
+                        Give customers a reason to do business with you.
                     </p>
                 </div>
                 <div class="img-wrapper col-md-6 col-sm-6 col-xs-12">
@@ -104,6 +105,7 @@
     </div>
 
 
+</div>
 </div>
 
 <div id="footer"></div>
