--- a/faqs.html
+++ b/faqs.html
@@ -41,6 +41,7 @@
 </header>
 
 <div id="page" class="">
+    <div class="pcontainer-wrapper">
     <h3>FREQUENTLY ASKED QUESTIONS</h3>
     <p>Have questions about EV charging? RIMONE has answers to it</p>
 
@@ -55,7 +56,7 @@
                 <div id="collapse1" class="panel-collapse collapse in">
                     <div class="panel-body">
                         <ul>
-                            <li>If you are unable to activate a charger with your card or the app, try disconnecting and reconnecting the connector.</li>
+                            <li>If you are unable to activate a charge with your card or the app, try disconnecting and reconnecting the connector.</li>
                             <li>Stop charging with a fast charger when your battery is 80% full, switch to a level 2 charger.</li>
                             <li>Try to recharge your EV once the battery is below 10%.</li>
                             <li>Preserve range by using your EV's regenerative braking. </li>
@@ -71,7 +72,7 @@
                 </div>
                 <div id="collapse2" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Your EV always controls the speed of charging. Most EVs slow the charging rate as the battery approaches a full charge to protect the battery. Above 80% it is recommended to use a Level 2 charging station to finishing charging your EV
+                        Your EV always controls the speed of charging. Most EVs slow the charge rate as the battery approaches a full charge to protect the battery. Above 80% it is recommended to use a Level 2 charging station to finishing charging your EV
                     </div>
                 </div>
             </div>
@@ -105,34 +106,17 @@
                 </div>
                 <div id="collapse4" class="panel-collapse collapse">
                     <div class="panel-body">
-                        
-                        <li>Power rating/type of the Charger</li>
-                        <li>Battery capacity of electric vehicle</li> 
-                        <li>Power drwaing capacity of electric vehicle</li>
-                        <li>Power rating of the onboard charger of electric vehicle</li>
-                                            
+                        Are your customers raving about you on social media? Share their great stories to help turn potential customers into loyal ones.
                     </div>
                 </div>
-            </div>     
-                       <div class="panel panel-default">
-                       <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">I still need help, Can I talk to someone?</a>
-                            </h4>
-              </div>
-                       <div id="collapse5" class="panel-collapse collapse">
-                       <div class="panel-body">
-                                Yes, Rimone customer Care is always there to help you at +91-7696102280.
-              </div>
-              </div>
-              </div>
-
+            </div>
         </div>
     </div>
 
 
 
 
+</div>
 </div>
 
 
