--- a/fleet.html
+++ b/fleet.html
@@ -41,6 +41,7 @@
 </header>
 
 <div id="page" class="">
+    <div class="pcontainer-wrapper">
     <div class="solutions">
         <div class="container">
             <h3>E-MOBILITY WITH RIMONE</h3>
@@ -52,7 +53,7 @@
             </div>
         </div>
         <div class="btm-img">
-            <img src="assets/images/combine2.png" />
+            <img src="assets/images/combine.webp" />
         </div>
 
     </div>
@@ -145,7 +146,7 @@
     </div>
 
 </div>
-
+</div>
 <div id="footer"></div>
 
 </body>
