--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </header>
 
     <div id="page" class="">
+        <div class="pcontainer-wrapper">
         <div class="service">
             <div class="container">
                 <h3>RICHARGE WITH RIMONE</h3>
@@ -137,7 +138,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <div id="footer"></div>
 
 </body>
