--- a/personal.html
+++ b/personal.html
@@ -41,6 +41,7 @@
 </header>
 
 <div id="page" class="">
+    <div class="pcontainer-wrapper">
     <div class="solutions">
         <div class="container">
             <h3>RIMONE CHARGING NETWORK</h3>
@@ -104,7 +105,7 @@
         </div>
     </div>
 </div>
-
+</div>
 <div id="footer"></div>
 
 </body>
