--- a/pricing.html
+++ b/pricing.html
@@ -41,6 +41,7 @@
     </header>
 
     <div id="page" class="">
+        <div class="pcontainer-wrapper">
       <h3>RIMONE EV CHARGING PRICING</h3>
       <p>Choose from plans which will let you charge at RIMONE's network of charging stations</p>
         <div class="btm-img">
@@ -75,7 +76,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <div id="footer"></div>
 
 </body>
