--- a/solution.html
+++ b/solution.html
@@ -41,6 +41,7 @@
 </header>
 
 <div id="page" class="">
+    <div class="pcontainer-wrapper">
     <div class="solutions">
         <div class="container">
             <h3>E-MOBILITY WITH RIMONE</h3>
@@ -48,19 +49,19 @@
             <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                 <img src="assets/images/fleet.jpg" />
                 <div class="btns">
-                    <a href="business.html">PUBLIC</a>
+                    <a href="#">PUBLIC</a>
                 </div>
             </div>
             <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                 <img src="assets/images/corporate.png" />
                 <div class="btns">
-                    <a href="business.html">COMMERCIAL</a>
+                    <a href="#">COMMERCIAL</a>
                 </div>
             </div>
             <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                 <img src="assets/images/office.png" />
                 <div class="btns">
-                    <a href="fleet.html">FLEET</a>
+                    <a href="#">FLEET</a>
                 </div>
             </div>
         </div>
@@ -132,7 +133,7 @@
         </div>
     </div>
 </div>
-
+</div>
 <div id="footer"></div>
 
 </body>
