--- a/best-ways-to-charge.html
+++ b/best-ways-to-charge.html
@@ -41,6 +41,7 @@
 </header>
 
 <div id="page" class="">
+    <div class="pcontainer-wrapper">
     <h3>CHARGING IN JUST THREE SIMPLE STEPS</h3>
     <hr>
     <div class="abtheros">
@@ -76,7 +77,7 @@
                 <div class="htext col-md-8 col-sm-8 col-xs-12">
                     <h4>Charged!!! Ready to Go</h4>
                     <p class="hinfo">
-                        When you are to hit the road, return to the charger and stop the session from your screen. If charging was done before you return, the Rimone app will inform you about the same. Return to the car, release the connector and place it back in the holster.
+                        When you are to hit the road, return to the charger and stop the session from your screen. If charging was done before you return, the Rimone app will inform you about the same Return to the car, release the connector and place it back in the holster.
                     </p>
                 </div>
             </div>
@@ -107,6 +108,7 @@
             <img src="assets/images/websitepage.png" />
         </div>
     </div>
+</div>
 </div>
 
 <div id="footer"></div>
