--- a/contact-us.html
+++ b/contact-us.html
@@ -41,6 +41,7 @@
     </header>
 
     <div id="page" class="">
+        <div class="pcontainer-wrapper">
       <h3>CONTACT RIMONE</h3>
       <hr>
         <div class="cdetails">
@@ -73,6 +74,7 @@
             </div>
         </div>
 
+    </div>
     </div>
 
     <div id="footer"></div>
