--- a/type-of-evs.html
+++ b/type-of-evs.html
@@ -41,6 +41,7 @@
 </header>
 
 <div id="page" class="">
+    <div class="pcontainer-wrapper">
     <div class="solutions">
         <div class="container">
             <h3>TYPES OF ELECTRIC VEHICLES</h3>
@@ -74,7 +75,7 @@
         <div class="container">
             <h3>All Battery Electric Vehicles in India</h3>
             <hr>
-            <img src="assets/images/evcars.png" />
+            <img src="assets/images/evcars.jpg" />
         </div>
     </div>
 
@@ -126,7 +127,7 @@
         </div>
     </div>
 </div>
-
+</div>
 <div id="footer"></div>
 
 </body>
