--- a/charging-basics-1.html
+++ b/charging-basics-1.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/default.css">
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl.css">
+	<link rel="stylesheet"  type="text/css" href="assets/css/myCustom.css">
     <link rel="stylesheet" type="text/css" href="#">
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -20,25 +21,24 @@
 
 </head>
 <body class="about charging-basics">
-<header>
-    <div class="header-innerwrapper">
-        <div class="logo col-md-4 col-sm-4 col-xs-2">
-            <img src="assets/images/logo.png" />
-        </div>
-
-        <div class="menu col-md-8 col-sm-8 col-xs-10">
-            <div class="nav-wrapper">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="solution.html">Solution</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact-us.html">Contact Us</a></li>
-                </ul>
+	<header>
+        <div class="header-innerwrapper">
+            <div class="menu col-md-8 col-sm-8 col-xs-10 menu-custom">
+				<div class="logo marg-5-top col-md-4 col-sm-4 col-xs-2">
+					<a href="index.html"><img src="assets/images/logo.png" />
+				</div>
+                <div class="nav-wrapper" style="width: inherit; text-align: left">
+                    <ul style="margin:revert">
+                        <li class="nav-btn"><a href="index.html">Home</a></li>
+                        <li class="nav-btn"><a href="solution.html">Solution</a></li>
+                        <li class="nav-btn"><a href="pricing.html">Pricing</a></li>
+                        <li class="nav-btn"><a href="about.html">About</a></li>
+                        <li class="nav-btn"><a href="contact-us.html">Contact Us</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
 
 <div id="page" class="">
     <div class="pcontainer-wrapper">
