--- a/faqs.html
+++ b/faqs.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/default.css">
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl.css">
+	<link rel="stylesheet"  type="text/css" href="assets/css/myCustom.css">
     <link rel="stylesheet" type="text/css" href="#">
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -20,25 +21,24 @@
 
 </head>
 <body class="pricing faqs">
-<header>
-    <div class="header-innerwrapper">
-        <div class="logo col-md-4 col-sm-4 col-xs-2">
-            <img src="assets/images/logo.png" />
-        </div>
-
-        <div class="menu col-md-8 col-sm-8 col-xs-10">
-            <div class="nav-wrapper">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="solution.html">Solution</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact-us.html">Contact Us</a></li>
-                </ul>
+	<header>
+        <div class="header-innerwrapper">
+            <div class="menu col-md-8 col-sm-8 col-xs-10 menu-custom">
+				<div class="logo marg-5-top col-md-4 col-sm-4 col-xs-2">
+					<a href="index.html"><img src="assets/images/logo.png" />
+				</div>
+                <div class="nav-wrapper" style="width: inherit; text-align: left">
+                    <ul style="margin:revert">
+                        <li class="nav-btn"><a href="index.html">Home</a></li>
+                        <li class="nav-btn"><a href="solution.html">Solution</a></li>
+                        <li class="nav-btn"><a href="pricing.html">Pricing</a></li>
+                        <li class="nav-btn"><a href="about.html">About</a></li>
+                        <li class="nav-btn"><a href="contact-us.html">Contact Us</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
 
 <div id="page" class="">
     <div class="pcontainer-wrapper">
@@ -50,16 +50,16 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">What are some of our best tips for charging?</a>
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">What are the best tips for charging an electric vehicle?</a>
                     </h4>
                 </div>
                 <div id="collapse1" class="panel-collapse collapse in">
                     <div class="panel-body">
                         <ul>
-                            <li>If you are unable to activate a charge with your card or the app, try disconnecting and reconnecting the connector.</li>
-                            <li>Stop charging with a fast charger when your battery is 80% full, switch to a level 2 charger.</li>
-                            <li>Try to recharge your EV once the battery is below 10%.</li>
-                            <li>Preserve range by using your EV's regenerative braking. </li>
+                            <li>If the charger is not activated using your card or the app, try disconnecting and then reconnecting the connector.</li>
+                            <li>Switch to a level 2 charging once the battery level reaches 80%.</li>
+                            <li>Recharge your EV once the battery is below 10% mark.</li>
+                            <li>Preserve the range of an EV by using your EV's regenerative braking. </li>
                         </ul>
                     </div>
                 </div>
@@ -67,12 +67,12 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">I notice the charging rate seems to slow after I've reached about 80%.</a>
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">I notice that the charging rate slows down significantly after I've reached about 80%.</a>
                     </h4>
                 </div>
                 <div id="collapse2" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Your EV always controls the speed of charging. Most EVs slow the charge rate as the battery approaches a full charge to protect the battery. Above 80% it is recommended to use a Level 2 charging station to finishing charging your EV
+                        Electric vehicle always controls the speed of charging. Most EVs slow the charging rate as battery approaches a full charge to protect the battery. Above 80% it is recommended to use a Level 2 charging station to finishing charging your EV
                     </div>
                 </div>
             </div>
@@ -110,6 +110,19 @@
                     </div>
                 </div>
             </div>
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" data-parent="#accordion" href="#collapse5">I notice the charging rate seems to slow after I've reached about 80%.</a>
+							</h4>
+						</div>
+					<div id="collapse5" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        Your EV always controls the speed of charging. Most EVs slow the charge rate as the battery approaches a full charge to protect the battery. Above 80% it is recommended to use a Level 2 charging station to finishing charging your EV
+                    </div>
+					</div>
+					</div>
+			
         </div>
     </div>
 
