--- a/faqs.html
+++ b/faqs.html
@@ -56,9 +56,8 @@
                 <div id="collapse1" class="panel-collapse collapse in">
                     <div class="panel-body">
                         <ul>
-                            <li>If the charger is not activated using your card or the app, try disconnecting and then reconnecting the connector.</li>
-                            <li>Switch to a level 2 charging once the battery level reaches 80%.</li>
                             <li>Recharge your EV once the battery is below 10% mark.</li>
+                            <li>Switch to a level 2 charging once the battery level reaches 80%.</li>
                             <li>Preserve the range of an EV by using your EV's regenerative braking. </li>
                         </ul>
                     </div>
@@ -72,7 +71,7 @@
                 </div>
                 <div id="collapse2" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Electric vehicle always controls the speed of charging. Most EVs slow the charging rate as battery approaches a full charge to protect the battery. Above 80% it is recommended to use a Level 2 charging station to finishing charging your EV
+                        Electric vehicle always controls the speed of charging. Most EVs slow the charging rate as battery approaches a full charge to protect the battery. It is recommended to use a Level 2 charger to finishing charging your EV once the battery is above 80%.
                     </div>
                 </div>
             </div>
@@ -84,7 +83,7 @@
                 </div>
                 <div id="collapse3" class="panel-collapse collapse">
                     <div class="panel-body">
-                        <p>The charging session will depend on several factors including:</p>
+                         The charging session will depend on several factors including:
                         <ul>
                             <li><strong>How full your battery is or, your "State of Charge".</strong> Batteries charge fastest when they are nearly empty (low SOC) </li>
                             <li><strong>The duration of your fast charge.</strong> As the battery fills up, the charge rate slows down to maximize the battery's longevity. Above 80% SOC, it might be better to switch to an AC Level 2 charger.</li>
