questions added in faqs

--- a/faqs.html
+++ b/faqs.html
@@ -85,10 +85,10 @@
                     <div class="panel-body">
                          The charging session will depend on several factors including:
                         <ul>
-                            <li><strong>How full your battery is or, your "State of Charge".</strong> Batteries charge fastest when they are nearly empty (low SOC) </li>
-                            <li><strong>The duration of your fast charge.</strong> As the battery fills up, the charge rate slows down to maximize the battery's longevity. Above 80% SOC, it might be better to switch to an AC Level 2 charger.</li>
-                            <li><strong>The temperature of your battery.</strong> Batteries don't like to be too hot or too cold. In extreme weather (hot or cold), your charge rate will be slower.</li>
-                            <li><strong>Battery deterioration.</strong> Batteries can deteriorate over time and lose capacity. The normal loss of a battery's capacity is defined by the vehicle's warranty.</li>
+                            <li><strong>The battery level or, your "State of Charge"</strong> Batteries charge fastest when they are nearly empty (low SOC) </li>
+                            <li><strong>The duration of your fast charge</strong> As the battery fills up, the charging rate slows down to maximize the battery life. Above 80% SOC, it might be better to switch to an AC Level 2 charger.</li>
+                            <li><strong>The battery temperature</strong> Batteries don't like to be too hot or too cold. During extreme weather (hot or cold), your charging rate will be slower.</li>
+                            <li><strong>Battery deterioration</strong> Batteries can deteriorate over time and lose capacity. The normal loss of a battery's capacity is defined by the vehicle's warranty.</li>
                             <li><strong>Your vehicle's current and voltage limits.</strong> Imagine electricity as water flowing through a pipe. The amount of power (kW) you receive is the product of Voltage (V) and Current (A). Both your vehicle and the charger have voltage and current limits.</li>
                         </ul>
                         <p>
@@ -100,24 +100,29 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">What are the factors that affect the charging speed?</a>
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">The connector got stuck, what should i do now?</a>
                     </h4>
                 </div>
                 <div id="collapse4" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Are your customers raving about you on social media? Share their great stories to help turn potential customers into loyal ones.
+                        First ensure that the charging is stopped. If it is still not disconnected try the following tips.
+						 <ul>
+                            <li>The car should release the connector automatically, you can use the key to lock and unlock the doors, this will release the socket.</li>
+                            <li>Sometime the connector stuck due to the weight of the cable, try supporting the cable and then unlock the connector using car keys.</li>
+						</ul>
+						Still there's a problem, contact Rimone customer care at +91-7696012280.
                     </div>
                 </div>
             </div>
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapse5">I notice the charging rate seems to slow after I've reached about 80%.</a>
+								<a data-toggle="collapse" data-parent="#accordion" href="#collapse5">I need help! To whom I can call ?</a>
 							</h4>
 						</div>
 					<div id="collapse5" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Your EV always controls the speed of charging. Most EVs slow the charge rate as the battery approaches a full charge to protect the battery. Above 80% it is recommended to use a Level 2 charging station to finishing charging your EV
+                     You need any help, Rimone Customer Care is always there to help you out at +91-7696012280.
                     </div>
 					</div>
 					</div>
