--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
             <h5>Company</h5>
             <ul class="footer-list">
                 <li><a href="about.html">About</a></li>
-                <li><a href="">Sustainability</a></li>
+                <li><a href="faqs.html">FAQ's</a></li>
                 <li><a href="">Diversity & Inclusion</a></li>
                 <li><a href="">Leadership</a></li>
                 <li><a href="contact-us.html">Careers</a></li>
