--- a/footer.html
+++ b/footer.html
@@ -12,12 +12,12 @@
         <div class="fmenu col-md-3 col-sm-3 col-xs-6">
             <h5>Company</h5>
             <ul class="footer-list">
-                <li><a href="about.html">About</a></li>
+                <li><a href="business.html">Public Charging</a></li>
+                <li><a href="business.html">Commercial Charging</a></li>
+                <li><a href="fleet.html">Fleet Charging</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="contact-us.html">Contact us</a></li>
                 <li><a href="faqs.html">FAQ's</a></li>
-                <li><a href="">Diversity & Inclusion</a></li>
-                <li><a href="">Leadership</a></li>
-                <li><a href="contact-us.html">Careers</a></li>
-                <li><a href="">News & Publications</a></li>
             </ul>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
@@ -31,7 +31,7 @@
             Copyright © 2021 Rimone - All Rights Reserved.
         </div>
         <div class="terms col-md-4 col-sm-4 col-xs-12">
-            <a href="#">Terms of Services</a> | <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Services</a> | <a href="Privacy-Policy.html">Privacy Policy</a>
         </div>
         <div class="social col-md-4 col-sm-4 col-xs-12">
             <a href=""><i class="fa fa-fw fa-facebook"></i></a>
