--- a/contact-us.html
+++ b/contact-us.html
@@ -70,6 +70,10 @@
                     <p class="hinfo">
                         Thank you for your enquiry. Our concerned team will be contacting you soon to help you with your query.
                     </p>
+					<p class="hinfo">
+                        You can also reach out to us at
+                    </p>
+					
                 </div>
             </div>
         </div>
