--- a/contact-us.html
+++ b/contact-us.html
@@ -73,7 +73,12 @@
 					<p class="hinfo">
                         You can also reach out to us at
                     </p>
-					
+					<p>
+                       Email - rimonecharge.com
+                    </p>
+					<p>
+                       Ph. +91-7696012280
+                    </p>
                 </div>
             </div>
         </div>
