--- a/contact-us.html
+++ b/contact-us.html
@@ -71,7 +71,7 @@
                         Thank you for your enquiry. Our concerned team will be contacting you soon to help you with your query.
                     </p>
 					<p class="hinfo">
-                        You can also reach out to us at
+                        You can also directly reach out to us at
                     </p>
 					<p>
                        Email - rimonecharge.com
