--- a/footer.html
+++ b/footer.html
@@ -31,7 +31,7 @@
             Copyright © 2021 Rimone - All Rights Reserved.
         </div>
         <div class="terms col-md-4 col-sm-4 col-xs-12">
-            <a href="#">Terms of Services</a> | <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Services</a> | <a href="assets/docs/RimonePrivacyPolicy.pdf">Privacy Policy</a>
         </div>
         <div class="social col-md-4 col-sm-4 col-xs-12">
             <a href=""><i class="fa fa-fw fa-facebook"></i></a>
