--- a/contact-us.html
+++ b/contact-us.html
@@ -59,7 +59,7 @@
                           <textarea placeholder="Message*" required ></textarea>
                           <input type="submit" value="SEND" />
                           <p>
-                            This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.
+                            This site is protected by reCAPTCHA and the Privacy Policy and Terms of Service apply.
                           </p>
                       </form>
                   </div>
