--- a/contact-us.html
+++ b/contact-us.html
@@ -27,7 +27,7 @@
         Host: "smtp.gmail.com",
         Username: "rimtest246@gmail.com",
         Password: "Test@123",
-        To: 'rimtest246@gmail.com',
+        To: 'rimanshugoyal@hotmail.com',
         From: "rimtest246@gmail.com",
         Subject: "Sending Email using javascript",
         Body: "Well that was easy!!",
