google adsense code added

--- a/type-of-evs.html
+++ b/type-of-evs.html
@@ -38,6 +38,11 @@
                 </div>
             </div>
         </div>
+		
+		<!-- Google adsense code -->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1249168120319390"
+     crossorigin="anonymous"></script>
+		
     </header>
 
 <div id="page" class="">
