--- a/business.html
+++ b/business.html
@@ -27,7 +27,7 @@
                 <img src="assets/images/logo.png" />
             </div>
 
-            <div class="menu col-md-8 col-sm-8 col-xs-10" style="height: 6rem;line-height: 3;left: 18%;position: absolute;>
+            <div class="menu col-md-8 col-sm-8 col-xs-10" style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
                 <div class="nav-wrapper">
                     <a href="#menu" class="menu-link">&#9776;</a>
                     <nav id="menu" class="panel" role="navigation">
