--- a/solution.html
+++ b/solution.html
@@ -23,11 +23,11 @@
 <body class="solution">
 	<header>
         <div class="header-innerwrapper">
-            <div class="logo col-md-4  col-sm-4 col-xs-2" style="height: 6rem;line-height: 3;left: 18%;position: absolute;>
+            <div class="logo col-md-4  col-sm-4 col-xs-2">
                 <img src="assets/images/logo.png" />
             </div>
 
-            <div class="menu col-md-8 col-sm-8 col-xs-10">
+            <div class="menu col-md-8 col-sm-8 col-xs-10" style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
                 <div class="nav-wrapper">
                     <a href="#menu" class="menu-link">&#9776;</a>
                     <nav id="menu" class="panel" role="navigation">
