--- a/faqs.html
+++ b/faqs.html
@@ -63,7 +63,7 @@
 <div id="page" class="">
     <div class="pcontainer-wrapper">
     <h3>FREQUENTLY ASKED QUESTIONS</h3>
-    <p>Have questions about EV charging? RIMONE has answers to it</p>
+    <p>Have questions about EV charging? RIMONE has answers to it.</p>
 
     <div class="container item-wrapper">
         <div class="panel-group" id="accordion">
