2nd images removed

--- a/footer.html
+++ b/footer.html
@@ -21,8 +21,8 @@
             </ul>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
-            <a href="#"><img src="assets/images/startupindia.png" /></a>
-            <a href="#"><img src="assets/images/gstore.png" /></a>
+            <a href="#"><img src="" /></a>
+            <a href="#"><img src="" /></a>
         </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
             <a href="#"><img src="assets/images/istore.png" /></a>
