--- a/footer.html
+++ b/footer.html
@@ -20,7 +20,10 @@
                 <li><a href="faqs.html">FAQ's</a></li>
             </ul>
         </div>
-       
+        <div class="app col-md-3 col-sm-3 col-xs-12">
+            <a href="#"><img src="assets/images/startupindia.png" /></a>
+            <a href="#"><img src="assets/images/gstore.png" /></a>
+        </div>
         <div class="app col-md-3 col-sm-3 col-xs-12">
             <a href="#"><img src="assets/images/istore.png" /></a>
             <a href="#"><img src="assets/images/gstore.png" /></a>
