--- a/fleet.html
+++ b/fleet.html
@@ -72,9 +72,50 @@
                 <a href="contact-us.html">CONTACT US</a>
             </div>
         </div>
-        <div class="btm-img">
-            <img src="assets/images/combine2.png" />
-        </div>
+        <div class="owl-carousel owl-main-carousel">
+
+                  <div class="owl-feat-item">
+                      <img src="assets/images/sdg7.png" />
+                      <div class="slidecaption">
+                          <div class="slide-title">Clean Energy</div>
+                      </div>
+                  </div>
+
+                  <div class="owl-feat-item">
+                      <img src="assets/images/sdg8.png" />
+                      <div class="slidecaption">
+                          <div class="slide-title">Economic Growth</div>
+                      </div>
+                  </div>
+
+                  <div class="owl-feat-item">
+                      <img src="assets/images/sdg9.png" />
+                      <div class="slidecaption">
+                          <div class="slide-title">Innovative Infrastructure</div>
+                      </div>
+                  </div>
+
+                  <div class="owl-feat-item">
+                      <img src="assets/images/sdg11.png" />
+                      <div class="slidecaption">
+                          <div class="slide-title">Sustainable Cities</div>
+                      </div>
+                  </div>
+
+                  <div class="owl-feat-item">
+                      <img src="assets/images/sdg13.png" />
+                      <div class="slidecaption">
+                          <div class="slide-title">Climate Action</div>
+                      </div>
+                  </div>
+
+                  <div class="owl-feat-item">
+                      <img src="assets/images/sdg15.png" />
+                      <div class="slidecaption">
+                          <div class="slide-title">Life on Land</div>
+                      </div>
+                  </div>
+		</div>
 
     </div>
 
