--- a/fleet.html
+++ b/fleet.html
@@ -26,7 +26,7 @@
             <div class="logo col-md-4  col-sm-4 col-xs-2">
                 <img src="assets/images/logo.png" />
             </div>
-
+      
             <div class="menu col-md-8 col-sm-8 col-xs-10" style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
                 <div class="nav-wrapper">
                     <a href="#menu" class="menu-link">&#9776;</a>
@@ -72,50 +72,55 @@
                 <a href="contact-us.html">CONTACT US</a>
             </div>
         </div>
-        <div class="owl-carousel owl-main-carousel">
+		<div class="icons">
+			<div class="container">
+				<div class="owl-carousel owl-main-carousel">
 
-                  <div class="owl-feat-item">
-                      <img src="assets/images/sdg7.png" />
-                      <div class="slidecaption">
-                          <div class="slide-title">Clean Energy</div>
-                      </div>
-                  </div>
+					  <div class="owl-feat-item">
+						  <img src="assets/images/sdg7.png" />
+						  <div class="slidecaption">
+							  <div class="slide-title">Clean Energy</div>
+						  </div>
+					  </div>
 
-                  <div class="owl-feat-item">
-                      <img src="assets/images/sdg8.png" />
-                      <div class="slidecaption">
-                          <div class="slide-title">Economic Growth</div>
-                      </div>
-                  </div>
+					  <div class="owl-feat-item">
+						  <img src="assets/images/sdg8.png" />
+						  <div class="slidecaption">
+							  <div class="slide-title">Economic Growth</div>
+						  </div>
+					  </div>
 
-                  <div class="owl-feat-item">
-                      <img src="assets/images/sdg9.png" />
-                      <div class="slidecaption">
-                          <div class="slide-title">Innovative Infrastructure</div>
-                      </div>
-                  </div>
+					  <div class="owl-feat-item">
+						  <img src="assets/images/sdg9.png" />
+						  <div class="slidecaption">
+							  <div class="slide-title">Innovative Infrastructure</div>
+						  </div>
+					  </div>
 
-                  <div class="owl-feat-item">
-                      <img src="assets/images/sdg11.png" />
-                      <div class="slidecaption">
-                          <div class="slide-title">Sustainable Cities</div>
-                      </div>
-                  </div>
+					  <div class="owl-feat-item">
+						  <img src="assets/images/sdg11.png" />
+						  <div class="slidecaption">
+							  <div class="slide-title">Sustainable Cities</div>
+						  </div>
+					  </div>
 
-                  <div class="owl-feat-item">
-                      <img src="assets/images/sdg13.png" />
-                      <div class="slidecaption">
-                          <div class="slide-title">Climate Action</div>
-                      </div>
-                  </div>
+					  <div class="owl-feat-item">
+						  <img src="assets/images/sdg13.png" />
+						  <div class="slidecaption">
+							  <div class="slide-title">Climate Action</div>
+						  </div>
+					  </div>
 
-                  <div class="owl-feat-item">
-                      <img src="assets/images/sdg15.png" />
-                      <div class="slidecaption">
-                          <div class="slide-title">Life on Land</div>
-                      </div>
-                  </div>
-		</div>
+					  <div class="owl-feat-item">
+						  <img src="assets/images/sdg15.png" />
+						  <div class="slidecaption">
+							  <div class="slide-title">Life on Land</div>
+						  </div>
+					  </div>
+			</div>
+	    </div>
+	</div>
+        
 
     </div>
 
